# weechat

./: .editorconfig  .gitattributes  .gitignore  .mailmap  .travis.yml  AUTHORS  AUTHORS.adoc  AUTHORS.asciidoc  AUTHORS.md  BUGS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog  ChangeLog.adoc  ChangeLog.asciidoc  Contributing.adoc  Contributing.asciidoc  Dockerfile  FAQ  FAQ.fr  INSTALL  INSTALL.asciidoc  Makefile  Makefile.am  NEWS  NEWS.asciidoc  README  README.adoc  README.asciidoc  README.md  REUSE.toml  ReleaseNotes.adoc  ReleaseNotes.asciidoc  SECURITY.md  TODO  UPGRADE_0.3  UPGRADING.md  autogen.sh  (+17 more)
doc/: CMakeLists.txt  Makefile  Makefile.am  asciidoc.conf  asciidoc.css  asciidoc_toc.css  asciidoc_toc2.css  buildxml.pl  date.xml.in  dblatex.conf  docgen.pl  docgen.py  docinfo.html  docinfo.html.in  include_autogen.xml  python_stub.py  toc2.css  weechat-curses.1  weechat-doc.css  weechat-html-one.xsl  weechat-html-one.xsl.in  weechat-html.xsl  weechat-html.xsl.in  weechat-pdf.xsl  weechat_doc_en.texi  weechat_doc_es.texi  weechat_doc_fr.texi  weechat_doc_pt.texi
doc/cs/: CMakeLists.txt  Makefile.am  cmdline_options.cs.adoc  cmdline_options.cs.asciidoc  man.cs.adoc  man_copyright.cs.adoc  man_files.cs.adoc  man_plugin_options.cs.adoc  weechat-headless.1.cs.adoc  weechat.1.cs.adoc  weechat.1.cs.asciidoc  weechat_quickstart.cs.adoc  weechat_quickstart.cs.asciidoc  weechat_quickstart.cs.txt
doc/de/: CMakeLists.txt  Makefile.am  authors.de.xml  cmdline_options.de.adoc  cmdline_options.de.asciidoc  cmdline_options.de.txt  cmdline_options_debug.de.adoc  config.xml  install.de.xml  intro.de.xml  irc_commands.xml  key_functions.xml  man.de.adoc  man_copyright.de.adoc  man_files.de.adoc  man_plugin_options.de.adoc  plugin_api.de.xml  plugin_charset.de.xml  plugin_fifo.de.xml  plugin_irc.de.xml  plugin_scripts.de.xml  plugins.de.xml  usage.de.xml  weechat-curses.1.de.txt  weechat-headless.1.de.adoc  weechat.1.de.adoc  weechat.1.de.asciidoc  weechat.1.de.txt  weechat.de.xml  weechat_commands.xml  weechat_faq.de.adoc  weechat_faq.de.asciidoc  weechat_faq.de.txt  weechat_quickstart.de.adoc  weechat_quickstart.de.asciidoc  weechat_quickstart.de.txt  weechat_scripting.de.adoc  weechat_scripting.de.asciidoc  weechat_scripting.de.txt  weechat_tester.de.adoc  (+5 more)
doc/en/: CMakeLists.txt  Makefile.am  authors.en.xml  cmdline_options.en.adoc  cmdline_options.en.asciidoc  cmdline_options.en.txt  cmdline_options_debug.en.adoc  config.xml  install.en.xml  intro.en.xml  irc_commands.xml  key_functions.xml  man.en.adoc  man_copyright.en.adoc  man_files.en.adoc  man_plugin_options.en.adoc  plugin_api.en.xml  plugin_charset.en.xml  plugin_fifo.en.xml  plugin_scripts.en.xml  plugin_xfer.en.xml  plugins.en.xml  usage.en.xml  weechat-curses.1.en.txt  weechat-headless.1.en.adoc  weechat.1.en.adoc  weechat.1.en.asciidoc  weechat.1.en.txt  weechat.en.xml  weechat_commands.xml  weechat_dev.en.adoc  weechat_dev.en.asciidoc  weechat_dev.en.txt  weechat_faq.en.adoc  weechat_faq.en.asciidoc  weechat_faq.en.txt  weechat_plugin_api.en.adoc  weechat_plugin_api.en.asciidoc  weechat_plugin_api.en.txt  weechat_quickstart.en.adoc  (+16 more)
doc/es/: CMakeLists.txt  Makefile.am  weechat_faq.es.adoc  weechat_quickstart.es.adoc  weechat_quickstart.es.asciidoc  weechat_quickstart.es.txt
doc/fr/: CMakeLists.txt  Makefile.am  authors.fr.xml  cmdline_options.fr.adoc  cmdline_options.fr.asciidoc  cmdline_options.fr.txt  config.xml  install.fr.xml  intro.fr.xml  irc_commands.xml  key_functions.xml  man_copyright.fr.adoc  man_files.fr.adoc  man_plugin_options.fr.adoc  plugin_api.fr.xml  plugin_charset.fr.xml  plugin_fifo.fr.xml  plugin_scripts.fr.xml  plugins.fr.xml  usage.fr.xml  weechat-curses.1.fr.txt  weechat-headless.1.fr.adoc  weechat.1.fr.adoc  weechat.1.fr.asciidoc  weechat.1.fr.txt  weechat.fr.xml  weechat_commands.xml  weechat_dev.fr.adoc  weechat_dev.fr.asciidoc  weechat_dev.fr.txt  weechat_faq.fr.adoc  weechat_faq.fr.asciidoc  weechat_faq.fr.txt  weechat_plugin_api.fr.adoc  weechat_plugin_api.fr.asciidoc  weechat_plugin_api.fr.txt  weechat_quickstart.fr.adoc  weechat_quickstart.fr.asciidoc  weechat_quickstart.fr.txt  weechat_relay_api.fr.adoc  (+13 more)
doc/it/: CMakeLists.txt  Makefile.am  cmdline_options.it.adoc  cmdline_options.it.asciidoc  cmdline_options.it.txt  man.it.adoc  man_copyright.it.adoc  man_files.it.adoc  man_plugin_options.it.adoc  weechat-curses.1.it.txt  weechat-headless.1.it.adoc  weechat.1.it.adoc  weechat.1.it.asciidoc  weechat.1.it.txt  weechat_faq.it.adoc  weechat_faq.it.asciidoc  weechat_faq.it.txt  weechat_plugin_api.it.adoc  weechat_plugin_api.it.asciidoc  weechat_plugin_api.it.txt  weechat_quickstart.it.adoc  weechat_quickstart.it.asciidoc  weechat_quickstart.it.txt  weechat_scripting.it.adoc  weechat_scripting.it.asciidoc  weechat_scripting.it.txt  weechat_tester.it.adoc  weechat_tester.it.asciidoc  weechat_tester.it.txt  weechat_user.it.adoc  weechat_user.it.asciidoc  weechat_user.it.txt  weechat_user.it.txt~
doc/ja/: CMakeLists.txt  Makefile.am  cmdline_options.ja.adoc  cmdline_options.ja.asciidoc  cmdline_options.ja.txt  cmdline_options_debug.ja.adoc  man.ja.adoc  man_copyright.ja.adoc  man_files.ja.adoc  man_plugin_options.ja.adoc  weechat-curses.1.ja.txt  weechat-headless.1.ja.adoc  weechat.1.ja.adoc  weechat.1.ja.asciidoc  weechat.1.ja.txt  weechat_dev.ja.adoc  weechat_dev.ja.asciidoc  weechat_dev.ja.txt  (+22 more)
icons/: CMakeLists.txt  Makefile.am
po/: CMakeLists.txt  Makevars  POTFILES.in  cs.po  de.po  es.po  fr.po  hu.po  it.po  ja.po  pl.po  pt.po  pt_BR.po  ru.po  sr.po  srcfiles.cmake  tr.po  weechat.pot
src/: CMakeLists.txt  Makefile  Makefile.am  command.c  command.h  completion.c  completion.h  config.c  config.h  history.h  weechat.c  weechat.h
src/irc/: irc.h  (+13 more)
tests/: CMakeLists.txt  Makefile.am  ncurses-fake.c  test_invariant_core-command.c  tests-record.cpp  tests-record.h  tests.cpp  tests.h
weechat/: AUTHORS  BUGS  CMakeLists.txt  ChangeLog  FAQ  FAQ.fr  INSTALL  Makefile.am  NEWS  README  TODO  autogen.sh  configure.in  weechat-curses.1  weechat.1  weechat.spec
(+2743 files in other folders)
